-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.10.0
-
3
-
9223372036854775807
FS has archives 1 and 2 at /tmp/arc1 and /tmp/arc2. A dirty archived file can be re-archived to a different archive leaking the original archive copy:
m:lustre# echo 111 > f1 m:lustre# lfs hsm_archive --archive=1 f1 m:lustre# lfs hsm_state f1 f1: (0x00000009) exists archived, archive_id:1 m:lustre# m:lustre# lfs hsm_archive --archive=2 f1 ## Ignored since f1 is up to date in archive. m:lustre# lfs hsm_state f1 f1: (0x00000009) exists archived, archive_id:1 m:lustre# cat /tmp/arc1/0004/0000/0401/0000/0002/0000/0x200000401\:0x4\:0x0 111 m:lustre# ls /tmp/arc2 ## Empty. m:lustre# echo 222 > f1 m:lustre# lfs hsm_state f1 f1: (0x0000000b) exists dirty archived, archive_id:1 m:lustre# lfs hsm_archive --archive=2 f1 m:lustre# lfs hsm_state f1 f1: (0x00000009) exists archived, archive_id:2 m:lustre# cat /tmp/arc1/0004/0000/0401/0000/0002/0000/0x200000401\:0x4\:0x0 111 m:lustre# cat /tmp/arc2/0004/0000/0401/0000/0002/0000/0x200000401\:0x4\:0x0 222